# quadruped_state_estimation

anymal_b_simple_description/launch/: standalone.launch
anymal_b_simple_description/urdf/: anymal.urdf.xacro
common_utils/: .gitignore
common_utils/eigen_utils/: CMakeLists.txt  package.xml
common_utils/eigen_utils/include/eigen_utils/: eigen_file_io.hpp  eigen_rand.hpp  eigen_rigidbody.hpp  eigen_utils.hpp  eigen_utils_common.hpp
common_utils/eigen_utils/src/: eigen_numerical.cpp  eigen_rand.cpp  eigen_rigidbody.cpp  eigen_utils_common.cpp
common_utils/eigen_utils_fftw/: CMakeLists.txt  package.xml
common_utils/eigen_utils_fftw/src/: eigen_fftw.cpp
common_utils/eigen_utils_fftw/test/: test_eigen_fftw.cpp
common_utils/stl_utils/: CMakeLists.txt  package.xml
fovis/: .gitignore
fovis/catkin/fovis/: CMakeLists.txt  package.xml
fovis/libfovis/libfovis/: motion_estimation.cpp  visual_odometry.cpp
fovis_ros/fovis_ros/launch/: indemind_test.launch  realsense_d435.launch  realsense_simpledog.launch  realsense_test.launch
hyq-description/launch/: upload.launch
hyq-description/robots/: hyq.urdf.xacro
kinematic_utils/forward_kinematics/: CMakeLists.txt  package.xml
pronto/pronto_core/: CMakeLists.txt
pronto/pronto_core/src/: indexed_meas_module.cpp  ins_module.cpp  lidar_odometry_module.cpp  pose_meas_module.cpp  rbis.cpp  rbis_update_interface.cpp  scan_matcher_module.cpp  state_est.cpp  update_history.cpp  visual_odometry_module.cpp
pronto/pronto_quadruped/: CMakeLists.txt
pronto/pronto_quadruped/src/: DynamicStanceEstimator.cpp  FlexEstimator.cpp  ImuBiasLock.cpp  LegOdometer.cpp  StanceEstimator.cpp
pronto/pronto_quadruped_ros/src/: bias_lock_handler_ros.cpp  dls_state_estimator_ros_node.cpp  leg_odometer_ros.cpp  legodo_handler_ros.cpp  stance_estimator_ros.cpp
pronto/pronto_ros/src/: index_meas_ros_handler.cpp  ins_ros_handler.cpp  lidar_odometry_ros_handler.cpp  pose_msg_ros_handler.cpp  pronto_ros_node.cpp  ros_frontend.cpp  scan_matcher_ros_handler.cpp  visual_odometry_ros_handler.cpp
pronto_anymal_example/anymal_robcogen/: CMakeLists.txt
pronto_anymal_example/pronto_anymal/config/: state_estimator.yaml
pronto_anymal_example/pronto_anymal/launch/: pronto_anymal.launch
pronto_anymal_example/pronto_anymal_commons/: CMakeLists.txt
pronto_laikago_example/laikago_commons/: CMakeLists.txt  package.xml
pronto_laikago_example/laikago_commons/include/: laikago_feet_contact_forces.hpp  laikago_feet_jacobians.hpp  laikago_forward_kinematics.hpp
pronto_laikago_example/laikago_commons/src/: laikago_feet_contact_forces.cpp  laikago_feet_jacobians.cpp  laikago_forward_kinematics.cpp
pronto_laikago_example/laikago_robcogen/: CMakeLists.txt  package.xml
pronto_laikago_example/laikago_robcogen/config/: laikago.dtdsl  laikago.kindsl  laikago.urdf.xacro
pronto_laikago_example/laikago_robcogen/src/: forward_dynamics.cpp  inertia_properties.cpp  inverse_dynamics.cpp  jacobians.cpp  jsim.cpp  miscellaneous.cpp  transforms.cpp
pronto_laikago_example/pronto_laikago/: CMakeLists.txt  package.xml
pronto_laikago_example/pronto_laikago/config/: laikago_test.yaml  laikago_test_real.yaml  pose_to_tf.yaml  pronto.rviz  state_estimator.yaml
pronto_laikago_example/pronto_laikago/launch/: aicp_test.launch  laikago_pronto_real.launch  laikago_state_estimation.launch  laikago_test.launch  pose_to_tf.launch  pronto_simpledog.launch  publish_trajectory.launch
pronto_laikago_example/pronto_laikago/src/: laikago_state.cpp  laikago_test.cpp  pose_means.cpp  pronto_laikago_node.cpp
pronto_simpledog_example/pronto_simpledog/: CMakeLists.txt  package.xml
pronto_simpledog_example/pronto_simpledog/config/: my_test.yaml
pronto_simpledog_example/pronto_simpledog/launch/: fovis_test.launch  my_test.launch  pronto_simpledog_test.launch  publish_trajectory_test.launch
pronto_simpledog_example/pronto_simpledog/scripts/: clone_deps.bash
pronto_simpledog_example/pronto_simpledog/src/: contact_force_test.cpp  pronto_simpledog_node.cpp  real_contact_force.cpp  test_pronto.cpp
pronto_simpledog_example/simpledog_commons/: CMakeLists.txt  package.xml
pronto_simpledog_example/simpledog_commons/include/: simpledog_feet_contact_forces.hpp  simpledog_feet_jacobians.hpp  simpledog_forward_kinematics.hpp
pronto_simpledog_example/simpledog_commons/src/: simpledog_feet_contact_forces.cpp  simpledog_feet_jacobians.cpp  simpledog_forward_kinematics.cpp
pronto_simpledog_example/simpledog_robcogen/: CMakeLists.txt  package.xml
pronto_simpledog_example/simpledog_robcogen/config/: simpledog.dtdsl  simpledog.kindsl
simpledog/config/: control22.yaml  control_dog.yaml
simpledog/launch/: laika_simulation.launch  quadruped_simulation.launch  simpledog_simulation.launch
simpledog/urdf/: foot_sensor_gazebo.urdf.xacro  joint_gazebo.urdf.xacro  laikago.urdf.xacro  quadruped_model.urdf.xacro  simpledog1.urdf.xacro  simpledog_gazebo.urdf.xacro
simpledog/worlds/: outdoor.world
simpledog_description/: CMakeLists.txt  package.xml
simpledog_description/config/: control.yaml  control_ninth.yaml
simpledog_description/launch/: load.launch  load_simpledog.launch  ninth_xbox.launch  ninth_xbox1.launch  quadruped_display.launch  quadruped_simulation.launch  quadruped_simulation_apriltag.launch  quadruped_simulation_kalibr.launch  quadruped_simulation_loop.launch  quadruped_simulation_outdoor.launch  quadruped_simulation_smallhouse.launch  quadruped_simulation_test.launch  quadruped_simulation_vins.launch  wheel0.launch  wheel_dog.launch  world_start.launch
simpledog_description/urdf/: VLP-16.urdf.xacro  _d435.gazebo.xacro  _d435.urdf.xacro  audi1.gv  audi1.urdf.xacro  audi1_gazebo.urdf.xacro  joint1_gazebo.urdf .xacro  joint_gazebo.urdf.xacro  kinect.urdf.xacro  ninth.csv  ninth.urdf  ninth.urdf.xacro  ninth_gazebo.urdf .xacro  quadruped_model.urdf.xacro  quadruped_model.urdf1.xacro  simpledog.urdf.xacro  simpledog_gazebo.urdf.xacro  stereo.urdf.xacro
simpledog_description/worlds/: apriltag_test.world  outdoor.world  testlocal.world  testvins.world  vinsloop.world
(+78 files in other folders)
