<?xml version="1.0"?>
<package format="2">
  <name>eigen_utils</name>
  <version>1.0.0</version>
  <description>The eigen_utils package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
