<?xml version="1.0"?>
<package format="2">
  <name>eigen_utils_fftw</name>
  <version>0.0.1</version>
  <description>The eigen_utils_fftw package</description>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
	<depend>eigen_utils</depend>
</package>
